--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-12 text-center" id="top-bar">
             <img src="/public/assets/img/hamburger.png" alt="burger" />
-            <h1> Eat-Burgers! </h1>
+            <h1> Let's Devour Burgers! </h1>
         </div>
         <div class="col-md-6 text-center" class="task">
             <div class="row">
