Tried to fix pathways for file structure

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 text-center" id="top-bar">
-            <img src="/public/assets/img/hamburger.png" alt="burger" />
+            <img src="../public/assets/img/hamburger.png" alt="burger" />
             <h1> Let's Devour Burgers! </h1>
         </div>
         <div class="col-md-6 text-center" class="task">
@@ -11,7 +11,7 @@
                 <div class="col-md-9 text-center">
                     <pre>{{this.id}}. {{this.burger_name}}
 					</pre>
-                    <!-- {{this.Date}} -->
+
                 </div>
                 <div class="col-md-3 text-center">
                     <form class="devour-form button-size">
