--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Eat-Burgers</title>
+    <title>Eat Burgers</title>
     <meta charset="UTF-8">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/public/assets/css/burger_style.css" type="text/css" />
+    <link rel="stylesheet" href="../../public/assets/css/burger_style.css" type="text/css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 
     {{!-- Add in jQuery --}}
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="/public/assets/js/script.js"></script>
+    <script src="../../public/assets/js/script.js"></script>
 </body>
 
 </html>
