--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 text-center" id="top-bar">
-            <img src="../public/assets/img/hamburger.png" alt="burger" />
+            <img src="assets/img/hamburger.png" alt="burger" />
             <h1> Let's Devour Burgers! </h1>
         </div>
         <div class="col-md-6 text-center" class="task">
